# chat

./: Cargo.toml  Readme.md
src/: channel.rs  client.rs  coordinator.rs  main.rs  server.rs  telnet.rs
src/ui/: mod.rs  telnet_backend.rs
src/ui/termion/: clear.rs  color.rs  cursor.rs  mod.rs  style.rs
templates/: instructions.txt  list.txt  welcome.txt
