[package]
name = "telnet-chat"
version = "0.1.0"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = "0.3"
serde = { version = "1.0", features = ["derive"] }
askama = "0.8"
tui = { version = "0.14", default-features = false}
itertools = "0.10"