[package]
name = "telnet-chat"
version = "0.1.0"
authors = ["Bernard Kolobara <me@kolobara.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lunatic = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12"
tui = { version = "0.19", default-features = false}
itertools = "0.11"
numtoa = "0.2"
clap = "4.3"
chrono = "0.4"
anyhow = "1"
